--- a/interactive-rating-component-main/style.css
+++ b/interactive-rating-component-main/style.css
@@ -1,3 +1,31 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+div {
+  display: box;
+}
+html {
+  display: box;
+}
+body {
+  font-family: "Overpass", sans-serif;
+  background: #121417;
+  line-height: 1.6rem;
+  font-size: 1.2rem;
+  color: white;
+}
+
+div.star {
+  background-color: #3a4655;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .rating {
   max-width: 550px;
   height: 550px;
@@ -9,54 +37,94 @@
   border-radius: 30px;
   padding: 35px;
 }
-
-.rating h1 {
-  color: hsl(0, 0%, 100%);
-  font-size: 3rem;
+.rating .body {
+  margin-top: 15px;
+}
+.rating .body h1 {
+  margin-top: 2rem;
+  color: green;
 }
 .rating p {
   color: #959eac;
-  font-size: 1.5rem;
   margin-bottom: 20px;
-}
-
-.submit {
-  background-color: hsl(25, 97%, 53%);
-  width: 100%;
-  padding: 25px;
-  font-family: sans-serif;
-  font-size: 1.2rem;
-  display: inline-block;
-  border: none;
-  border-radius: 50px;
-  text-transform: uppercase;
-  font-weight: 400;
-  letter-spacing: 0.1rem;
-  cursor: pointer;
-}
-
-.numbers {
-  display: flex;
-  flex-direction: row;
-  padding: 30px;
-  font-size: 2rem;
 }
 
 .rating .numbers {
   display: flex;
   justify-content: space-between;
-  margin-top: 40px;
+  margin-top: 60px;
   margin-bottom: 50px;
+  /* flex-direction: row;
+  padding: 30px;
+  font-size: 2rem; */
 }
 
 .rating .numbers button {
   background-color: #3a4655;
   color: #959eac;
   border-radius: 50%;
-  height: 90px;
-  width: 90px;
+  height: 70px;
+  width: 70px;
   font-size: 1.2rem;
   border: none;
   transition: all 500ms;
   cursor: pointer;
+}
+.rating .submit {
+  font-family: "Overpass", sans-serif;
+  font-size: 1.2rem;
+  display: block;
+  width: 100%;
+  background-color: #fb7413;
+  border: none;
+  padding: 15px;
+  border-radius: 50px;
+  text-transform: uppercase;
+  color: white;
+  font-weight: 400;
+  letter-spacing: 0.1rem;
+  cursor: pointer;
+}
+
+.rating .body .error-message {
+  position: absolute;
+  left: 50%;
+  top: 58%;
+  transform: translate(-50%, 0%);
+  text-align: center;
+  color: red;
+}
+/* .error-message {
+  display: none;
+} */
+
+.rating #evaluation {
+  text-align: center;
+}
+
+/* .thank-you {
+  display: none;
+} */
+
+.rating .body img {
+  display: block;
+  margin: auto;
+}
+
+.rating .select-message {
+  padding: 10px 15px;
+  color: #fb7413;
+  background: #3a4655;
+  display: inline-flex;
+  margin-top: 3rem;
+  margin-bottom: 1.1rem;
+  border-radius: 50px;
+}
+
+.rating .body h1 {
+  margin-top: 2rem;
+}
+
+.rating p {
+  color: #959eac;
 }
