--- a/interactive-rating-component-main/style.css
+++ b/interactive-rating-component-main/style.css
@@ -39,17 +39,18 @@ div.star {
 }
 .rating .body {
   margin-top: 15px;
+  color: black;
 }
 .rating .body h1 {
   margin-top: 2rem;
-  color: green;
+  color: yellow;
 }
-.rating p {
-  color: #959eac;
+.rating p.message {
+  color: #e60f7a;
   margin-bottom: 20px;
 }
 
-.rating .numbers {
+.rating .buttons {
   display: flex;
   justify-content: space-between;
   margin-top: 60px;
@@ -59,7 +60,7 @@ div.star {
   font-size: 2rem; */
 }
 
-.rating .numbers button {
+.rating .buttons button {
   background-color: #3a4655;
   color: #959eac;
   border-radius: 50%;
@@ -70,6 +71,10 @@ div.star {
   transition: all 500ms;
   cursor: pointer;
 }
+rating .buttons button.error {
+  border: 1px solid rgb(17, 0, 255);
+}
+
 .rating .submit {
   font-family: "Overpass", sans-serif;
   font-size: 1.2rem;
@@ -89,26 +94,20 @@ div.star {
 .rating .body .error-message {
   position: absolute;
   left: 50%;
-  top: 58%;
+  top: 48%;
   transform: translate(-50%, 0%);
   text-align: center;
   color: red;
 }
-/* .error-message {
-  display: none;
-} */
 
 .rating #evaluation {
   text-align: center;
 }
 
-/* .thank-you {
-  display: none;
-} */
-
 .rating .body img {
   display: block;
   margin: auto;
+  margin-top: 1rem;
 }
 
 .rating .select-message {
@@ -121,10 +120,19 @@ div.star {
   border-radius: 50px;
 }
 
-.rating .body h1 {
-  margin-top: 2rem;
+.heading {
+  margin-top: 3rem;
+  color: green;
 }
 
 .rating p {
-  color: #959eac;
+  color: orange;
+  padding: 10px 15px;
+  margin-top: 1rem;
+  margin-bottom: 1.1rem;
+  font-weight: 400;
+}
+
+.display-none {
+  display: none;
 }
