--- a/qr-code-component-main/style.css
+++ b/qr-code-component-main/style.css
@@ -13,8 +13,9 @@ body {
   justify-content: center;
   align-items: center;
   font-family: "Outfit", sans-serif;
-  margin: 0;
+  /* margin: 0; */
   min-height: 100vh;
+  padding: 3.4375rem 1.5rem;
 }
 
 .box {
