--- a/order-summary-component-main/style.css
+++ b/order-summary-component-main/style.css
@@ -10,15 +10,17 @@ body {
   align-items: center;
   min-height: 100vh;
   padding: 1.5rem;
-  margin-left: 200px;
-  margin-right: 200px;
+  /* margin-left: 200px;
+  margin-right: 200px; */
   background-color: #e0e8ff;
+  margin: 0;
+  font-size: 1rem;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: top;
 }
-.card {
-  background-color: white;
-  display: flex;
-  flex-direction: column;
-  border-radius: 20px;
+main {
+  display: block;
 }
 
 .container {
@@ -27,23 +29,13 @@ body {
   justify-content: center;
   min-height: 100vh;
 }
-.card-price {
-  background-color: orange;
+/* 
+.card {
+  background-color: white;
   display: flex;
-  justify-content: space-around;
-  align-items: center;
-}
-
-.card-plan {
-  background-color: purple;
-}
-
-.card-change {
-  background-color: green;
-}
-
-.card-payment {
-  background-color: saddlebrown;
+  flex-direction: column;
+  border-radius: 20px;
+  max-width: 450px;
 }
 
 .card-summary {
@@ -67,5 +59,38 @@ body {
   border-top-left-radius: 20px;
 }
 
-.card-payment {
+.button {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  margin-top: 2em;
 }
+
+.payment-btn {
+  background-color: hsl(245, 75%, 52%);
+  padding: 1em 2.5em;
+  font-weight: 700;
+  color: white;
+}
+
+.btn {
+  margin-bottom: 2em;
+  border-radius: 20px;
+}
+
+.card-price {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background-color: #f5f7ff;
+  padding-left: 100px;
+  padding-right: 100px;
+  border-radius: 20px;
+}
+
+.card-price .music-icon {
+  /* display: flex;
+  justify-content: left;
+  align-items: padding-left; */
+  object-fit: contain;
+} */
