--- a/profile-card-component-main/style.css
+++ b/profile-card-component-main/style.css
@@ -27,7 +27,7 @@ body {
   border-radius: 30px;
   margin: 170px auto 50px;
   width: 25rem;
-  height: 25rem;
+  height: 30rem;
   position: relative;
   overflow: hidden;
 }
@@ -37,7 +37,8 @@ body {
   justify-content: center;
   align-items: center; */
   display: block;
-  margin-left: auto;
+
+  margin-left: 30%;
   margin-right: auto;
   width: 50%;
   font-weight: 700;
@@ -56,6 +57,17 @@ body {
 .card-bio span {
   color: hsl(0, 0%, 59%);
 }
+
+.card-middle {
+  border-bottom: solid hsl(0, 0%, 59%);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 2rem;
+  padding-top: auto;
+  box-shadow: border-box;
+}
 .card-middle p {
   display: flex;
   justify-content: center;
@@ -66,17 +78,11 @@ body {
 .card-middle img {
   display: block;
   margin-top: 30px;
-  margin-left: auto;
-  margin-right: auto;
+  margin-bottom: 3rem;
   width: 6em;
   border-radius: 100px;
   border: 5px solid white;
-
   overflow: visible;
-}
-
-.card-middle {
-  border-bottom: solid hsl(0, 0%, 59%);
 }
 
 .card-bottom {
